2009-01-05  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/38384
	* crossconfig.m4: Define HAVE_FABSF for hpux crosses.

2009-01-05  Ben Elliston  <bje@au.ibm.com>

        * configure.ac (GLIBCXX_CHECK_STANDARD_LAYOUT): Remove invocation.
        * configure: Regenerate.

2009-01-05  Ben Elliston  <bje@au.ibm.com>

	* configure.ac: Exchange the order of GLIBCXX_ENABLE_THREADS and
	GLIBCXX_ENABLE_ATOMIC_BUILTINS macro invocations.
	* configure: Regenerate.

2009-01-04  Richard Guenther  <rguenther@suse.de>

	PR libstdc++/38720
	* include/ext/pointer.h (_Relative_pointer_impl): Use an unsigned
	integer type for storage, arithmetic and comparisons.
	* testsuite/ext/ext_pointer/1_neg.cc: Adjust line numbers.

2009-01-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/38719
	* include/bits/forward_list.h (_Fwd_list_iterator<>::_M_next,
	_Fwd_list_const_iterator::_M_next): Fix return type.

2009-01-03  Paolo Carlini  <paolo.carlini@oracle.com>

	* Revert last commit, reopen and suspend libstdc++/38678.

2009-01-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/38678
	* include/std/istream (basic_istream<>::_M_read): New.
	* include/bits/istream.tcc (basic_istream<>::_M_read): Define.
	(basic_istream<>::read, basic_istream<>::readsome): Use it.
	* include/std/ostream (basic_ostream<>::_M_write_): New.
	(basic_ostream<>::_M_write): Adjust.
	* include/bits/ostream.tcc (basic_ostream<>::_M_write_): Define.
	* testsuite/27_io/basic_istream/read/char/38678.cc: New.
	* testsuite/27_io/basic_istream/read/wchar_t/38678.cc: Likewise.
	* testsuite/27_io/basic_ostream/write/char/38678.cc: Likewise.
	* testsuite/27_io/basic_ostream/write/wchar_t/38678.cc: Likewise.

2008-12-22  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/ext/concurrence.h: Fix __gthread_cond_t initialisation
	function macro name.

2008-12-22  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/doxygen/stdheader.cc: Add cstdlib.
	* doc/doxygen/user.cfg.in: Regenerate for doxygen 1.5.7.
